--- a/index.html
+++ b/index.html
@@ -420,14 +420,26 @@
         <div class="nt-subrow"><span>— Dietary Fiber</span><strong>5g</strong></div>
         <div class="nt-subrow"><span>— Total Sugars</span><strong>5g</strong></div>
         <div class="nt-row"><span>Protein</span><strong>10g</strong></div>
+        <div class="nt-row"><span>Caffeine</span><strong>~80mg</strong></div>
+        <div class="nt-row"><span>L-theanine</span><strong>100–200mg</strong></div>
         <footer>*Pre-release targets; values may change.</footer>
       </div>
-      <div class="nt-facts-note">
+    <div class="nt-notes">
+      <div class="nt-note">
         <h4>Why this mix?</h4>
         <p>Protein + fiber + smart carbs help you feel fueled, not sleepy. Add electrolytes & adaptogens, and you get
-           focus you can feel—without brewing or sugar bombs.</p>
+       focus you can feel—without brewing or sugar bombs.</p>
+      </div>
+      <div class="nt-note">
+        <h4>When to use</h4>
+        <p>Morning classes, deep-work blocks, pre-meeting, post-workout, travel. If caffeine-sensitive, start with half.</p>
+      </div>
+      <div class="nt-note">
+        <h4>Made without</h4>
+        <p>No artificial sweeteners (no sucralose/acesulfame K/aspartame), no added sugar, no dairy. 100% plant-based.</p>
       </div>
     </div>
+      
     <!-- Quick Compare -->
     <div class="nt-compare">
       <h3 class="nt-compare-title">Quick compare</h3>
