Update header title for nutrition section

--- a/index.html
+++ b/index.html
@@ -307,7 +307,9 @@
     <!-- Header -->
     <div class="nt-head">
       <span class="nt-badge">Nutrition</span>
-      <h2 class="nt-title">Smart fuel, simple label</h2>
+      <h2 class="nt-title">
+        <span class="nt-gold">Smart fuel</span>, <span class="nt-gold">simple label</span>
+      </h2>
       <p class="nt-sub">
         Built around balanced macros, steady energy, and ingredients you can pronounce — no artificial sweeteners,
         no weird aftertaste.
