--- a/index.html
+++ b/index.html
@@ -6,22 +6,58 @@
   <title>Buzzbar – Natural Energy</title>
   <link rel="stylesheet" href="style.css?v=4" />
 </head>
+  ...
+  <!-- Auto-hide header on scroll down, show on scroll up -->
+  <script>
+    (function() {
+      const header = document.querySelector('.site-header');
+      let lastY = window.scrollY;
+
+      window.addEventListener('scroll', () => {
+        const y = window.scrollY;
+        if (y > 80 && y > lastY) {
+          header.classList.add('hide');     // scrolling down -> hide
+        } else {
+          header.classList.remove('hide');  // scrolling up -> show
+        }
+        lastY = y;
+      }, { passive: true });
+    })();
+  </script>
 <body>
+  <!-- Purple soft gradient behind the transparent header -->
+  <div class="page-top-gradient"></div>
 
   <!-- ===== NAVBAR ===== -->
   <header class="site-header" role="banner">
-    <div class="container header-inner">
-      <a href="#home" class="brand" aria-label="Buzzbar — Home">
-        <span class="brand-word buzz">Buzz</span><span class="brand-word bar">bar</span>
-      </a>
+    ...
+  </header>
+  ...
+</body>
 
-      <nav class="main-nav" role="navigation" aria-label="Primary">
+
+  
+  <!-- ===== NAVBAR ===== -->
+  <header class="site-header" role="banner">
+    <div class="container header-inner">
+      <!-- Brand (clickable to #home) -->
+      <a href="#home" class="brand" aria-label="Buzzbar — Home">
+        <span class="brand-line">
+          <span class="brand-word buzz">Buzz</span>
+          <span class="brand-word bar">bar</span>
+        </span>
+        <span class="brand-sub">CLEAN ENERGY, SMARTER NUTRITION</span>
+      </a>
+  
+      <!-- Main navigation -->
+      <nav class="main-nav" role="navigation" aria-label="Primary navigation">
         <a href="#products" class="nav-link">Products</a>
         <a href="#science" class="nav-link">Science</a>
         <a href="#nutrition" class="nav-link">Nutrition</a>
-        <a href="#story" class="nav-link">Our Story</a>
+        <a href="#our-story" class="nav-link">Our Story</a>
       </nav>
-
+  
+      <!-- CTA -->
       <a href="#contact" class="cta-contact">Contact</a>
     </div>
   </header>
@@ -558,7 +594,7 @@
 
   
 <!-- ===== OUR STORY (polished) ===== -->
-<section id="our-story" class="our-story">
+<section id="our-story" class="our-story"> 
   <div class="container story-grid">
 
     <!-- LEFT: copy -->
@@ -622,7 +658,7 @@
 
 
   <!-- ===== FOOTER ===== -->
-  <footer>
+  <footer id="contact">
     <div class="container footer-content">
       <div class="footer-section">
         <h3>Buzzbar</h3>
