Clean up index.html by removing unused sections
Removed commented out sections for page content.

--- a/index.html
+++ b/index.html
@@ -36,17 +36,6 @@
     </div>
   </header>
 
-  <!-- ===== PAGE CONTENT ===== -->
-  <!-- Make sure these targets exist -->
-  <section id="home" class="hero hero--photo">...</section>
-  <section id="products">...</section>
-  <section id="science">...</section>
-  <section id="nutrition">...</section>
-  <section id="our-story" class="our-story">...</section>
-  <footer id="contact">...</footer>
-
-
-
 
   <!-- ===== HERO ===== -->
   <section class="hero hero--photo" id="home">
@@ -68,7 +57,7 @@
 
         <div class="hero-stats">
           <div class="stat">
-            <span class="stat-number">80g</span>
+            <span class="stat-number">80mg</span>
             <span class="stat-label">Clean Caffiene</span>
           </div>
           <div class="stat">
