Update testimonials in index.html

--- a/index.html
+++ b/index.html
@@ -525,19 +525,19 @@
     <div class="sp-grid">
       <article class="sp-card">
         <div class="sp-stars" aria-label="5 stars">★★★★★</div>
-        <blockquote>“Best pre-meeting snack. No jitters, no crash.”</blockquote>
+        <blockquote>“Best on-the-go snack, especially when dealing with tiring children, without the crash.”</blockquote>
         <footer class="sp-who">
-          <span class="sp-avatar">AP</span>
-          <div><strong>Alex P.</strong><small>Founder</small></div>
+          <span class="sp-avatar">HW</span>
+          <div><strong>Helena W</strong><small>Mother</small></div>
         </footer>
       </article>
 
       <article class="sp-card">
         <div class="sp-stars" aria-label="5 stars">★★★★★</div>
-        <blockquote>“The Focus bar actually helps me study.”</blockquote>
+        <blockquote>“The Buzzbar actually helps me study and lock in for my difficult exams.”</blockquote>
         <footer class="sp-who">
-          <span class="sp-avatar">SL</span>
-          <div><strong>Sara L.</strong><small>Student</small></div>
+          <span class="sp-avatar">GL</span>
+          <div><strong>Gustaf L</strong><small>Student</small></div>
         </footer>
       </article>
     </div>
