--- a/index.html
+++ b/index.html
@@ -632,7 +632,7 @@
 
 
   <!-- ===== FOOTER ===== -->
-  <footer class="footer">
+  <footer id="footer" class="footer">
     <div class="footer-container">
       <div class="footer-column">
         <h3 class="footer-title">Buzzbar</h3>
