--- a/index.html
+++ b/index.html
@@ -447,6 +447,10 @@
         <h4>Made without</h4>
         <p>No artificial sweeteners (no sucralose/acesulfame K/aspartame), no added sugar, no dairy. 100% plant-based.</p>
       </div>
+      <div class="nt-note">
+        <h4>Smart nutrition, fast fuel</h3>
+        <p>Healthy food shouldn’t slow you down. Each Buzzbar gives you balanced macros and clean caffeine — ready in seconds, no shaker or fridge needed.</p>
+      </div>
     </div>
   </div>
     
