--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <a href="#science" class="nav-link">Science</a>
         <a href="#nutrition" class="nav-link">Nutrition</a>
         <a href="#our-story" class="nav-link">Our Story</a>
-        <a href="#footer" class="nav-link">Contac</a>
+        <a href="#footer" class="nav-link">Contact</a>
       </nav>
 
       <!-- CTA -->
