Change CTA link from 'Contact' to 'Buy Now'

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </nav>
 
       <!-- CTA -->
-      <a href="#contact" class="cta-contact">Contact</a>
+      <a href="#products" class="cta-contact">Buy Now</a>
     </div>
   </header>
 
