--- a/index.html
+++ b/index.html
@@ -612,21 +612,21 @@
 
   <!-- Founders row (3 cards) -->
   <div class="container founders-row">
-    <article class="founder-card">
+    <article class="founder-card" data-founder-name="Tom Wiseman" data-founder-role="Co-Founder" data-founder-story="Tom is the product tinkerer, constantly iterating on taste and nutrition profiles. From testing early batches in the family kitchen to partnering with European co-packers, he focuses on building bars that feel as good as they taste.">
       <div class="founder-avatar"><span>TW</span></div>
       <h3>Tom Wiseman</h3>
       <p class="role">Co-Founder</p>
       <blockquote>“Build something we want to use daily.”</blockquote>
     </article>
 
-    <article class="founder-card">
+    <article class="founder-card" data-founder-name="Charlie Wiseman" data-founder-role="Co-Founder" data-founder-story="Charlie spent a decade leading high-intensity teams before co-founding Buzzbar. He obsesses over workflow-friendly nutrition and turned his commute cravings into the blueprint for our Focus blend.">
       <div class="founder-avatar"><span>CW</span></div>
       <h3>Charlie Wiseman</h3>
       <p class="role">Co-Founder</p>
       <blockquote>“No jitters. No crash. Great taste.”</blockquote>
     </article>
 
-    <article class="founder-card">
+    <article class="founder-card" data-founder-name="Oliver Wiseman" data-founder-role="Co-Founder" data-founder-story="Oliver is the storyteller and community builder. He guides the Buzzbar brand, connecting with early adopters, nutritionists, and sleep scientists to make sure every bar feels like a smarter choice.">
       <div class="founder-avatar"><span>OW</span></div>
       <h3>Oliver Wiseman</h3>
       <p class="role">Co-Founder</p>
@@ -634,6 +634,19 @@
     </article>
   </div>
 </section>
+  <!-- Founder detail modal -->
+  <div class="founder-modal" role="dialog" aria-modal="true" aria-hidden="true">
+    <div class="founder-modal__overlay" data-founder-close></div>
+    <div class="founder-modal__dialog" role="document">
+      <button class="founder-modal__close" type="button" aria-label="Close founder story" data-founder-close>×</button>
+      <div class="founder-modal__content">
+        <h3 class="founder-modal__name"></h3>
+        <p class="founder-modal__role"></p>
+        <p class="founder-modal__story"></p>
+      </div>
+    </div>
+  </div>
+
 
 
   <!-- ===== FOOTER ===== -->
@@ -695,6 +708,55 @@
         }
         lastY = y;
       }, { passive: true });
+    })();
+
+        (function() {
+      const modal = document.querySelector('.founder-modal');
+      const nameEl = modal.querySelector('.founder-modal__name');
+      const roleEl = modal.querySelector('.founder-modal__role');
+      const storyEl = modal.querySelector('.founder-modal__story');
+      const founders = document.querySelectorAll('.founder-card');
+
+      const openModal = (card) => {
+        nameEl.textContent = card.dataset.founderName;
+        roleEl.textContent = card.dataset.founderRole;
+        storyEl.textContent = card.dataset.founderStory;
+        modal.setAttribute('aria-hidden', 'false');
+        modal.classList.add('is-visible');
+        document.body.classList.add('no-scroll');
+      };
+
+      const closeModal = () => {
+        modal.setAttribute('aria-hidden', 'true');
+        modal.classList.remove('is-visible');
+        document.body.classList.remove('no-scroll');
+      };
+
+      founders.forEach(card => {
+        card.addEventListener('click', () => openModal(card));
+        card.addEventListener('keydown', (event) => {
+          if (event.key === 'Enter' || event.key === ' ') {
+            event.preventDefault();
+            openModal(card);
+          }
+        });
+        card.setAttribute('tabindex', '0');
+        card.setAttribute('role', 'button');
+        card.setAttribute('aria-haspopup', 'dialog');
+        card.setAttribute('aria-label', `${card.dataset.founderName} story`);
+      });
+
+      modal.addEventListener('click', (event) => {
+        if (event.target.matches('[data-founder-close]')) {
+          closeModal();
+        }
+      });
+
+      document.addEventListener('keydown', (event) => {
+        if (event.key === 'Escape' && modal.classList.contains('is-visible')) {
+          closeModal();
+        }
+      });
     })();
   </script>
   
