--- a/index.html
+++ b/index.html
@@ -354,42 +354,42 @@
       <article class="nt-card">
         <div class="nt-eyebrow">Steady</div>
         <h3>Low glycemic design</h3>
-        <p>Carbs + fiber + fats tuned to avoid the whiplash you get from syrupy snacks.</p>
-        <details class="nt-more">
-          <summary>How we approach it</summary>
-          <p>We aim for complex carbs and fiber to slow absorption, plus protein and fats to extend satiety—so energy
-             lasts instead of spiking.</p>
-        </details>
+        <p class="nt-card-summary">Balanced carbs, protein and fats for slow-burn energy.</p>
+        <button class="nt-more-btn" type="button"
+          data-nt-title="Low glycemic design"
+          data-nt-detail="We balance complex carbs with fiber and good fats so release feels smooth, not spiky.|Protein keeps you satisfied while the carb profile avoids the sugar whiplash of syrupy snacks."
+        >Tap for breakdown</button>
       </article>
 
       <article class="nt-card">
         <div class="nt-eyebrow">Clean</div>
         <h3>No artificial sweeteners</h3>
-        <p>We avoid sucralose/acesulfame K/aspartame so the flavor stays natural.</p>
-        <details class="nt-more">
-          <summary>Sweetness strategy</summary>
-          <p>We combine low-GI sweeteners and flavor balance—no chemical aftertaste, no sugar crash.</p>
-        </details>
+        <p class="nt-card-summary">Naturally sweet without the chemical aftertaste.</p>
+        <button class="nt-more-btn" type="button"
+          data-nt-title="No artificial sweeteners"
+          data-nt-detail="We skip sucralose, acesulfame K and aspartame so the flavor stays real.|Instead, we blend low-glycemic sweetness with spices and a hint of sea salt to keep your palate happy without a crash."
+        >Tap for breakdown</button>
       </article>
 
       <article class="nt-card">
         <div class="nt-eyebrow">Functional</div>
         <h3>Electrolytes + adaptogens</h3>
-        <p>Hydration + stress support so focus sticks when you need it most.</p>
-        <details class="nt-more">
-          <summary>What that means</summary>
-          <p>Sodium/potassium/magnesium for fluid balance; a thoughtful adaptogen blend for perceived stress and fatigue.</p>
+        <p class="nt-card-summary">Hydration support plus calm focus ingredients.</p>
+        <button class="nt-more-btn" type="button"
+          data-nt-title="Electrolytes + adaptogens"
+          data-nt-detail="Sodium, potassium and magnesium help keep fluid balance in check when you are on the move.|A thoughtful adaptogen stack supports perceived stress so focus sticks through busy days."
+        >Tap for breakdown</button>
         </details>
       </article>
 
       <article class="nt-card">
         <div class="nt-eyebrow">Digestible</div>
         <h3>Gut-friendly blend</h3>
-        <p>We keep fibers moderate and avoid heavy sugar alcohol loads.</p>
-        <details class="nt-more">
-          <summary>Why it matters</summary>
-          <p>Overdoing polyols can upset stomachs. We choose simpler routes for a bar you can actually study on.</p>
-        </details>
+        <p class="nt-card-summary">Fiber is kept moderate so your stomach stays happy.</p>
+        <button class="nt-more-btn" type="button"
+          data-nt-title="Gut-friendly blend"
+          data-nt-detail="We steer clear of heavy sugar alcohol loads that can upset routines.|Moderate fiber plus simple ingredients keep Buzzbar easy to enjoy before meetings or workouts."
+        >Tap for breakdown</button>
       </article>
     </div>
 
@@ -397,24 +397,27 @@
     <div class="nt-highlights">
       <div class="nt-hi-card">
         <h4>Protein sources</h4>
-        <ul>
-          <li>Plant protein blend for complete AA profile</li>
-          <li>Balanced texture — not chalky</li>
-        </ul>
+        <p class="nt-hi-summary">Plant-based blend for a complete amino profile.</p>
+        <button class="nt-more-btn" type="button"
+          data-nt-title="Protein sources"
+          data-nt-detail="Pea, rice and fava proteins combine for complementary amino acids.|We build the texture to feel soft, not chalky, so you will actually finish the bar."
+        >See sources</button>
       </div>
       <div class="nt-hi-card">
         <h4>Fats that work</h4>
-        <ul>
-          <li>Nut/seed-forward for flavor & satiety</li>
-          <li>Helps slow energy release</li>
-        </ul>
+        <p class="nt-hi-summary">Nut and seed fats for flavor and satiety.</p>
+        <button class="nt-more-btn" type="button"
+          data-nt-title="Fats that work"
+          data-nt-detail="Almond, sunflower and flax support mouthfeel while slowing digestion.|The mix keeps you feeling fueled without the waxy coating common in protein bars."
+        >See sources</button>
       </div>
       <div class="nt-hi-card">
         <h4>Smart carbs</h4>
-        <ul>
-          <li>Complex carbs + fiber</li>
-          <li>Zero added sugar</li>
-        </ul>
+        <p class="nt-hi-summary">Complex carbs with zero added sugar.</p>
+        <button class="nt-more-btn" type="button"
+          data-nt-title="Smart carbs"
+          data-nt-detail="We lean on oats, chicory root and fruit fibers so you get steady energy.|No corn syrup, no added sugar—just enough natural sweetness to balance the protein."
+        >See sources</button>
       </div>
     </div>
 
@@ -438,19 +441,35 @@
     <div class="nt-notes">
       <div class="nt-note">
         <h4>Why this mix?</h4>
-        <p>Protein + fiber + smart carbs help you feel fueled, not sleepy. Add electrolytes & adaptogens, and you get focus you can feel—without brewing or sugar bombs.</p>
+        <p class="nt-note-summary">Balanced macros + clean caffeine to keep energy steady.</p>
+        <button class="nt-more-btn" type="button"
+          data-nt-title="Why this mix?"
+          data-nt-detail="Protein, fiber and complex carbs work together so you feel fueled, not sleepy.|Electrolytes and adaptogens layer on top for focus you can feel without brewing a drink."
+        >Dive deeper</button>
       </div>
       <div class="nt-note">
         <h4>When to use</h4>
-        <p>Morning classes, deep-work blocks, pre-meeting, post-workout, travel. If caffeine-sensitive, start with half.</p>
+        <p class="nt-note-summary">Morning classes, deep work, travel days and quick pre-gym fuel.</p>
+        <button class="nt-more-btn" type="button"
+          data-nt-title="When to use"
+          data-nt-detail="Grab Buzzbar before meetings, during study sessions or when you need a calm boost on the road.|If you are caffeine sensitive, start with half and build from there."
+        >Dive deeper</button>
       </div>
       <div class="nt-note">
         <h4>Made without</h4>
-        <p>No artificial sweeteners (no sucralose/acesulfame K/aspartame), no added sugar, no dairy. 100% plant-based.</p>
+        <p class="nt-note-summary">No artificial sweeteners, no dairy, no added sugar.</p>
+        <button class="nt-more-btn" type="button"
+          data-nt-title="Made without"
+          data-nt-detail="We skip sucralose, acesulfame K, aspartame and excess sugar alcohols.|Every bar stays 100% plant-based so it fits more routines."
+        >Dive deeper</button>
       </div>
       <div class="nt-note">
-        <h4>Smart nutrition, fast fuel</h3>
-        <p>Healthy food shouldn’t slow you down. Each Buzzbar gives you balanced macros and clean caffeine — ready in seconds, no shaker or fridge needed.</p>
+        <h4>Smart nutrition, fast fuel</h4>
+        <p class="nt-note-summary">Ready-to-go energy in seconds—no blender or fridge.</p>
+        <button class="nt-more-btn" type="button"
+          data-nt-title="Smart nutrition, fast fuel"
+          data-nt-detail="Healthy food should be easy. Buzzbar is built for backpacks, bike commutes and busy studios.|You get balanced macros and clean caffeine without hauling a shaker bottle."
+        >Dive deeper</button>
       </div>
     </div>
   </div>
@@ -510,6 +529,17 @@
       <summary>When is nutrition finalized?</summary>
       <p>We’re testing now. This page updates as we lock the recipe; sign up to get the final label at launch.</p>
     </details>
+  </div>
+  <!-- Nutrition modal for deeper dives -->
+  <div class="nt-modal" role="dialog" aria-modal="true" aria-hidden="true">
+    <div class="nt-modal__overlay" data-nt-close></div>
+    <div class="nt-modal__panel" role="document">
+      <button class="nt-modal__close" type="button" aria-label="Close nutrition details" data-nt-close>×</button>
+      <div class="nt-modal__body">
+        <h3 class="nt-modal__title"></h3>
+        <div class="nt-modal__content"></div>
+      </div>
+    </div>
   </div>
 </div>
 </section>
@@ -710,7 +740,80 @@
       }, { passive: true });
     })();
 
-        (function() {
+       (function() {
+      const modal = document.querySelector('.nt-modal');
+      if (!modal) return;
+
+      const body = document.body;
+      const titleEl = modal.querySelector('.nt-modal__title');
+      const contentEl = modal.querySelector('.nt-modal__content');
+      const closeBtn = modal.querySelector('.nt-modal__close');
+      const triggers = document.querySelectorAll('.nt-more-btn');
+      let lastTrigger = null;
+
+      const renderContent = (btn) => {
+        contentEl.innerHTML = '';
+        const detail = btn.dataset.ntDetail || '';
+        detail.split('|').forEach(segment => {
+          const text = segment.trim();
+          if (!text) return;
+          const p = document.createElement('p');
+          p.textContent = text;
+          contentEl.appendChild(p);
+        });
+
+        const points = btn.dataset.ntPoints || '';
+        const items = points.split('|').map(item => item.trim()).filter(Boolean);
+        if (items.length) {
+          const list = document.createElement('ul');
+          list.className = 'nt-modal__list';
+          items.forEach(item => {
+            const li = document.createElement('li');
+            li.textContent = item;
+            list.appendChild(li);
+          });
+          contentEl.appendChild(list);
+        }
+      };
+
+      const openModal = (btn) => {
+        lastTrigger = btn;
+        const title = btn.dataset.ntTitle || btn.closest('.nt-card, .nt-hi-card, .nt-note')?.querySelector('h3, h4')?.textContent || 'Details';
+        titleEl.textContent = title;
+        renderContent(btn);
+        modal.setAttribute('aria-hidden', 'false');
+        modal.classList.add('is-visible');
+        body.classList.add('no-scroll');
+        requestAnimationFrame(() => closeBtn.focus());
+      };
+
+      const closeModal = () => {
+        modal.setAttribute('aria-hidden', 'true');
+        modal.classList.remove('is-visible');
+        body.classList.remove('no-scroll');
+        if (lastTrigger) {
+          lastTrigger.focus();
+        }
+      };
+
+      triggers.forEach(btn => {
+        btn.addEventListener('click', () => openModal(btn));
+      });
+
+      modal.addEventListener('click', (event) => {
+        if ('ntClose' in event.target.dataset) {
+          closeModal();
+        }
+      });
+
+      document.addEventListener('keydown', (event) => {
+        if (event.key === 'Escape' && modal.classList.contains('is-visible')) {
+          closeModal();
+        }
+      });
+    })();
+
+    (function() {
       const modal = document.querySelector('.founder-modal');
       const nameEl = modal.querySelector('.founder-modal__name');
       const roleEl = modal.querySelector('.founder-modal__role');
