--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   <header class="site-header" role="banner">
     <div class="container header-inner">
       <!-- Brand (clicks to top) -->
-      <a href="#home" class="brand" aria-label="Buzzbar — Home">
+      <a href="#home" class="brand" aria-label="BuzzBar — Home">
         <span class="brand-line">
           <span class="brand-word buzz">Buzz</span>
-          <span class="brand-word bar">bar</span>
+          <span class="brand-word bar">Bar</span>
         </span>
         <span class="brand-sub">CLEAN ENERGY, SMARTER NUTRITION</span>
       </a>
