--- a/index.html
+++ b/index.html
@@ -636,7 +636,7 @@
     <!-- RIGHT: image placeholder (drop your team photo later) -->
     <aside class="story-visual">
       <!-- Replace src when you have your real team photo -->
-      <img src="team-placeholder.jpg" alt="Buzzbar founders" class="story-image" />
+      <img src="IMG_8401.JPG" alt="Buzzbar founders" class="story-image" />
     </aside>
   </div>
 
