--- a/Products.html
+++ b/Products.html
@@ -1,1 +1,28 @@
+products.html
 
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Products — Buzzbar</title>
+  <link rel="stylesheet" href="style.css?v=6" />
+</head>
+<body data-page="products">
+  <!-- include the SAME header block shown above -->
+  <!-- ===== PAGE CONTENT ===== -->
+  <main class="page">
+    <section class="section-header container" style="padding-top:40px">
+      <span class="section-badge">Products</span>
+      <h1>Pick your boost</h1>
+      <p class="section-subtitle">Full lineup, specs, ingredients & FAQs.</p>
+    </section>
+
+    <!-- Bring over your full products carousel + long-form product details here -->
+    <!-- ... -->
+  </main>
+
+  <!-- Reuse your existing footer -->
+  <footer id="footer"> ... </footer>
+</body>
+</html>
