--- a/nutrition.html
+++ b/nutrition.html
@@ -1,1 +1,60 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Nutrition — Buzzbar</title>
+  <link rel="stylesheet" href="style.css?v=6" />
+</head>
+<body data-page="nutrition">
+  <header class="site-header" role="banner">
+    <div class="container header-inner">
+      <a href="index.html" class="brand" aria-label="Buzzbar — Home">
+        <span class="brand-line"><span class="brand-word buzz">Buzz</span><span class="brand-word bar">bar</span></span>
+        <span class="brand-sub">CLEAN ENERGY, SMARTER NUTRITION</span>
+      </a>
+      <nav class="main-nav" role="navigation" aria-label="Primary navigation">
+        <a href="products.html"  class="nav-link">Products</a>
+        <a href="science.html"   class="nav-link">Science</a>
+        <a href="nutrition.html" class="nav-link">Nutrition</a>
+        <a href="story.html"     class="nav-link">Our Story</a>
+        <a href="#footer"        class="nav-link">Contact</a>
+      </nav>
+      <a href="products.html" class="cta-contact">Buy Now</a>
+    </div>
+  </header>
+
+  <main class="page">
+    <section class="section-header container" style="padding-top:40px">
+      <span class="section-badge">Nutrition</span>
+      <h1>Smart fuel, simple label</h1>
+      <p class="section-subtitle">Balanced macros • No added sugar • Plant-based</p>
+    </section>
+
+    <!-- Paste your entire NUTRITION section here -->
+    <section id="nutrition" class="nt-section">
+      <div class="container">
+        <!-- your nt-macros, nt-grid benefits, nt-highlights, nt-facts-wrap, nt-compare, nt-faq -->
+      </div>
+    </section>
+  </main>
+
+  <footer id="footer">
+    <!-- paste your existing footer markup here -->
+  </footer>
+
+  <script>
+    (function(){
+      const header=document.querySelector('.site-header'); let lastY=window.scrollY;
+      window.addEventListener('scroll',()=>{const y=window.scrollY;
+        if(y>80 && y>lastY){header.classList.add('hide')} else{header.classList.remove('hide')}
+        lastY=y;},{passive:true});
+      const page=document.body.dataset.page;
+      document.querySelectorAll('.main-nav .nav-link').forEach(a=>{
+        const href=a.getAttribute('href')||''; if(href.startsWith(page)) a.classList.add('is-active');
+      });
+    })();
+  </script>
+</body>
+</html>
 
