--- a/Our-Story.html
+++ b/Our-Story.html
@@ -4,9 +4,10 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Our Story — Buzzbar</title>
-  <link rel="stylesheet" href="style.css?v=6" />
+  <link rel="stylesheet" href="style.css?v=7" />
 </head>
 <body data-page="story">
+  <div class="page-top-gradient"></div>
   <header class="site-header" role="banner">
     <div class="container header-inner">
       <a href="index.html" class="brand" aria-label="Buzzbar — Home">
@@ -18,7 +19,7 @@
         <a href="science.html"   class="nav-link">Science</a>
         <a href="nutrition.html" class="nav-link">Nutrition</a>
         <a href="story.html"     class="nav-link">Our Story</a>
-        <a href="#footer"        class="nav-link">Contact</a>
+        <a href="contact.html"   class="nav-link">Contact</a>
       </nav>
       <a href="products.html" class="cta-contact">Buy Now</a>
     </div>
@@ -31,22 +32,44 @@
       <p class="section-subtitle">Why we started, who we are, and where we’re going.</p>
     </section>
 
-    <!-- Paste your OUR STORY layout here (copy from index, including the image you added) -->
     <section id="our-story" class="our-story">
       <div class="container story-grid">
-        <!-- your story copy column -->
-        <!-- your <aside class="story-visual"><img src="IMG_8401.JPG" class="story-image" /></aside> -->
+        <div class="story-text">
+          <div class="story-intro">
+            <h3>Why Buzzbar?</h3>
+            <p>We wanted a clean, nutritious energy source without brewing, chugging, or cooking. Something we could grab on the run.</p>
+          </div>
+          <div class="story-journey">
+            <h3>What we’re building</h3>
+            <p>Natural caffeine from green tea, L-theanine for calm focus, electrolytes for hydration, and a label you can read.</p>
+          </div>
+          <div class="story-values">
+            <div class="value-item"><div class="value-icon">⚡</div><div><h4>No crash</h4><p>Steady energy for classes, deep work, workouts.</p></div></div>
+            <div class="value-item"><div class="value-icon">🌿</div><div><h4>Plant-based</h4><p>No artificial sweeteners; simple ingredients.</p></div></div>
+          </div>
+        </div>
+        <aside class="story-visual">
+          <img src="IMG_8401.JPG" alt="Buzzbar founders" class="story-image" />
+        </aside>
       </div>
 
-      <!-- founders row cards -->
-      <div class="container founders-row">
-        <!-- your three founder-card blocks -->
+      <div class="container founders-row" style="margin-top:32px">
+        <article class="founder-card"><div class="founder-avatar">TW</div><h3>Tom Wiseman</h3><p class="role">Co-Founder</p></article>
+        <article class="founder-card"><div class="founder-avatar">CW</div><h3>Charlie Wiseman</h3><p class="role">Co-Founder</p></article>
+        <article class="founder-card"><div class="founder-avatar">OW</div><h3>Oliver Wiseman</h3><p class="role">Co-Founder</p></article>
       </div>
     </section>
   </main>
 
-  <footer id="footer">
-    <!-- paste your existing footer markup here -->
+  <footer id="footer" class="footer">
+    <!-- same footer markup as index.html -->
+    <div class="footer-container">
+      <div class="footer-column"><h3>Buzzbar</h3><p>Clean energy, smarter nutrition.</p></div>
+      <div class="footer-column"><h4>Contact</h4><p><a href="mailto:tomwiseman@buzzbar.se">tomwiseman@buzzbar.se</a></p></div>
+      <div class="footer-column"><h4>Info</h4><p>Plant-based. No artificial sweeteners.</p></div>
+      <div class="footer-column"><h4>Newsletter</h4><form class="newsletter-form"><input placeholder="Email" /><button>→</button></form></div>
+    </div>
+    <div class="footer-bottom">© 2025 Buzzbar</div>
   </footer>
 
   <script>
@@ -55,9 +78,8 @@
       window.addEventListener('scroll',()=>{const y=window.scrollY;
         if(y>80 && y>lastY){header.classList.add('hide')} else{header.classList.remove('hide')}
         lastY=y;},{passive:true});
-      const page=document.body.dataset.page;
       document.querySelectorAll('.main-nav .nav-link').forEach(a=>{
-        const href=a.getAttribute('href')||''; if(href.startsWith(page)) a.classList.add('is-active');
+        const href=a.getAttribute('href')||''; if(href.startsWith('story')) a.classList.add('is-active');
       });
     })();
   </script>
